crates/modde-cli/tests/snapshots/cli_help_snapshots__snapshot_game_export_help.snap
---
source: crates/modde-cli/tests/cli_help_snapshots.rs
assertion_line: 65
expression: "stdout(&[\"game\", \"export\", \"--help\"])"
---
Export a game registration to TOML

Usage: modde game export [OPTIONS] <ID>

Arguments:
  <ID>  

Options:
      --data-dir <DATA_DIR>          Override data directory (default: ~/.local/share/modde or $`MODDE_DATA_DIR`) [env: MODDE_DATA_DIR=]
      --with-optiscaler              
      --heap-profile <HEAP_PROFILE>  Write a DHAT heap profile. Requires the `heap-profile` cargo feature [env: MODDE_HEAP_PROFILE=]
      --output <OUTPUT>              
  -h, --help                         Print help
