crates/modde-cli/tests/snapshots/cli_help_snapshots__snapshot_install_help.snap
---
source: crates/modde-cli/tests/cli_help_snapshots.rs
assertion_line: 45
expression: "stdout(&[\"install\", \"--help\"])"
---
Install mods from various sources

Usage: modde install [OPTIONS] <COMMAND>

Commands:
  nexus-collection  Install a Nexus Collection
  wabbajack         Install from a Wabbajack modlist
  mod               Install a single mod from Nexus
  help              Print this message or the help of the given subcommand(s)

Options:
      --data-dir <DATA_DIR>          Override data directory (default: ~/.local/share/modde or $`MODDE_DATA_DIR`) [env: MODDE_DATA_DIR=]
      --heap-profile <HEAP_PROFILE>  Write a DHAT heap profile. Requires the `heap-profile` cargo feature [env: MODDE_HEAP_PROFILE=]
  -h, --help                         Print help
