crates/modde-cli/tests/snapshots/cli_help_snapshots__snapshot_nxm_help.snap
---
source: crates/modde-cli/tests/cli_help_snapshots.rs
assertion_line: 55
expression: "stdout(&[\"nxm\", \"--help\"])"
---
Handle nxm:// download links from Nexus Mods

Usage: modde nxm [OPTIONS] <COMMAND>

Commands:
  handle   Handle an nxm:// download URI
  install  Install the nxm:// URI handler for your desktop
  help     Print this message or the help of the given subcommand(s)

Options:
      --data-dir <DATA_DIR>          Override data directory (default: ~/.local/share/modde or $`MODDE_DATA_DIR`) [env: MODDE_DATA_DIR=]
      --heap-profile <HEAP_PROFILE>  Write a DHAT heap profile. Requires the `heap-profile` cargo feature [env: MODDE_HEAP_PROFILE=]
  -h, --help                         Print help
